--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
       payBtn.textContent = 'Preparing...';
 
       try {
-        const res = await fetch('https://payment-07mb.onrender.com', {
+        const res = await fetch('https://payment-07mb.onrender.com/create-payment', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ amount })
@@ -63,4 +63,5 @@
   </script>
 </body>
   </html>
+
 
