Change payment URL in index.html
Updated payment URL in the script to point to the deployed backend.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
 
       try {
         // call backend (change URL if deployed on Render)
-        const res = await fetch('/create-payment', {
+        const res = await fetch('https://payment-07mb.onrender.com/create-payment', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ amount })
@@ -62,3 +62,4 @@
   </script>
 </body>
     </html>
+
