--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Add Money - UroPay</title>
+  <title>Add Money - UPI Gateway</title>
   <style>
     body {
       font-family: system-ui, Arial;
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="card">
-    <h2>Add Money via UPI (UroPay)</h2>
+    <h2>Add Money via UPI</h2>
     <label>Amount (₹1 - ₹10,000)</label>
     <input id="amount" type="number" min="1" max="10000" placeholder="Enter amount" />
     <label>UPI ID</label>
@@ -72,16 +72,17 @@
       btn.textContent = "Processing...";
 
       try {
-        const res = await fetch("https://payment-07mb.onrender.com/create-payment", {
+        const res = await fetch("/create-payment", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ amount, vpa, vpaName }),
         });
+
         const data = await res.json();
         console.log(data);
 
-        if (data?.data?.payment_url) {
-          window.location.href = data.data.payment_url;
+        if (data?.payment_url) {
+          window.location.href = data.payment_url;
         } else {
           msg.textContent = "Payment created, but no URL returned.";
         }
@@ -94,5 +95,4 @@
     });
   </script>
 </body>
-  </html>
-
+</html>
