--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
       btn.textContent = "Processing...";
 
       try {
-        const res = await fetch("/create-payment", {
+        const res = await fetch("https://payment-07mb.onrender.com/create-payment", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ amount, vpa, vpaName }),
@@ -96,3 +96,4 @@
   </script>
 </body>
 </html>
+
